Update REI integrated