@@ -7,6 +7,7 @@ import com.zurrtum.create.catnip.animation.LerpedFloat;
 import com.zurrtum.create.catnip.animation.LerpedFloat.Chaser;
 import com.zurrtum.create.catnip.data.Couple;
 import com.zurrtum.create.catnip.data.Iterate;
+import com.zurrtum.create.catnip.data.Pair;
 import com.zurrtum.create.catnip.theme.Color;
 import com.zurrtum.create.client.catnip.animation.AnimationTickHolder;
 import com.zurrtum.create.client.catnip.gui.UIRenderHelper;
@@ -20,6 +21,7 @@ import com.zurrtum.create.client.foundation.utility.CreateLang;
 import com.zurrtum.create.content.contraptions.actors.seat.SeatEntity;
 import com.zurrtum.create.content.logistics.BigItemStack;
 import com.zurrtum.create.content.logistics.packager.InventorySummary;
+import com.zurrtum.create.content.logistics.stockTicker.PackageOrder;
 import com.zurrtum.create.content.logistics.stockTicker.StockKeeperRequestMenu;
 import com.zurrtum.create.content.logistics.stockTicker.StockTickerBlockEntity;
 import com.zurrtum.create.content.processing.burner.BlazeBurnerBlock.HeatLevel;
@@ -27,10 +29,13 @@ import com.zurrtum.create.content.processing.burner.BlazeBurnerBlockEntity;
 import com.zurrtum.create.foundation.gui.menu.MenuType;
 import com.zurrtum.create.infrastructure.component.ClipboardEntry;
 import com.zurrtum.create.infrastructure.component.PackageOrderWithCrafts;
+import com.zurrtum.create.infrastructure.component.PackageOrderWithCrafts.CraftingEntry;
 import com.zurrtum.create.infrastructure.packet.c2s.LogisticalStockRequestPacket;
 import com.zurrtum.create.infrastructure.packet.c2s.PackageOrderRequestPacket;
 import com.zurrtum.create.infrastructure.packet.c2s.StockKeeperCategoryHidingPacket;
 import com.zurrtum.create.infrastructure.packet.c2s.StockKeeperLockPacket;
+import it.unimi.dsi.fastutil.ints.IntList;
+import it.unimi.dsi.fastutil.objects.Object2ObjectMap;
 import net.minecraft.block.BlockState;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gl.RenderPipelines;
@@ -42,7 +47,9 @@ import net.minecraft.client.util.Window;
 import net.minecraft.client.util.math.Rect2i;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.player.PlayerInventory;
+import net.minecraft.item.Item.TooltipContext;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.tooltip.TooltipType;
 import net.minecraft.network.RegistryByteBuf;
 import net.minecraft.registry.Registries;
 import net.minecraft.sound.SoundEvents;
@@ -62,6 +69,7 @@ import org.lwjgl.glfw.GLFW;
 
 import java.lang.ref.WeakReference;
 import java.util.*;
+import java.util.function.Function;
 
 public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockKeeperRequestMenu> {
     public static class CategoryEntry {
@@ -110,8 +118,7 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
     public List<CategoryEntry> categories = new ArrayList<>();
 
     public List<BigItemStack> itemsToOrder = new ArrayList<>();
-    //TODO
-    //    public List<CraftableBigItemStack> recipesToOrder = new ArrayList<>();
+    public List<CraftableBigItemStack> recipesToOrder = new ArrayList<>();
 
     WeakReference<LivingEntity> stockKeeper = new WeakReference<>(null);
     WeakReference<BlazeBurnerBlockEntity> blaze = new WeakReference<>(null);
@@ -296,8 +303,7 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
                 categories.clear();
 
             clampScrollBar();
-            //TODO
-            //            updateCraftableAmounts();
+            updateCraftableAmounts();
             return;
         }
 
@@ -358,8 +364,7 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
             categories.clear();
 
         clampScrollBar();
-        //TODO
-        //        updateCraftableAmounts();
+        updateCraftableAmounts();
     }
 
     @Override
@@ -724,33 +729,32 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
             ms.popMatrix();
         }
 
-        //TODO
-        //        // Render JEI imported
-        //        if (recipesToOrder.size() > 0) {
-        //            int jeiX = x + (windowWidth - colWidth * recipesToOrder.size()) / 2 + 1;
-        //            int jeiY = orderY - 31;
-        //            ms.pushMatrix();
-        //            ms.translate(jeiX, jeiY);
-        //            int xoffset = -3;
-        //            AllGuiTextures.STOCK_KEEPER_REQUEST_BLUEPRINT_LEFT.render(graphics, xoffset, -3);
-        //            xoffset += 10;
-        //            for (int i = 0; i <= (recipesToOrder.size() - 1) * 5; i++) {
-        //                AllGuiTextures.STOCK_KEEPER_REQUEST_BLUEPRINT_MIDDLE.render(graphics, xoffset, -3);
-        //                xoffset += 4;
-        //            }
-        //            AllGuiTextures.STOCK_KEEPER_REQUEST_BLUEPRINT_RIGHT.render(graphics, xoffset, -3);
-        //
-        //            for (int index = 0; index < recipesToOrder.size(); index++) {
-        //                CraftableBigItemStack craftableBigItemStack = recipesToOrder.get(index);
-        //                boolean isStackHovered = index == hoveredSlot.getSecond() && -2 == hoveredSlot.getFirst();
-        //                ms.pushMatrix();
-        //                ms.translate(index * colWidth, 0);
-        //                renderItemEntry(graphics, 1, craftableBigItemStack, isStackHovered, true);
-        //                ms.popMatrix();
-        //            }
-        //
-        //            ms.popMatrix();
-        //        }
+        // Render JEI imported
+        if (!recipesToOrder.isEmpty()) {
+            int jeiX = x + (windowWidth - colWidth * recipesToOrder.size()) / 2 + 1;
+            int jeiY = orderY - 31;
+            ms.pushMatrix();
+            ms.translate(jeiX, jeiY);
+            int xoffset = -3;
+            AllGuiTextures.STOCK_KEEPER_REQUEST_BLUEPRINT_LEFT.render(graphics, xoffset, -3);
+            xoffset += 10;
+            for (int i = 0; i <= (recipesToOrder.size() - 1) * 5; i++) {
+                AllGuiTextures.STOCK_KEEPER_REQUEST_BLUEPRINT_MIDDLE.render(graphics, xoffset, -3);
+                xoffset += 4;
+            }
+            AllGuiTextures.STOCK_KEEPER_REQUEST_BLUEPRINT_RIGHT.render(graphics, xoffset, -3);
+
+            for (int index = 0; index < recipesToOrder.size(); index++) {
+                CraftableBigItemStack craftableBigItemStack = recipesToOrder.get(index);
+                boolean isStackHovered = index == hoveredSlot.getSecond() && -2 == hoveredSlot.getFirst();
+                ms.pushMatrix();
+                ms.translate(index * colWidth, 0);
+                renderItemEntry(graphics, craftableBigItemStack, isStackHovered, true);
+                ms.popMatrix();
+            }
+
+            ms.popMatrix();
+        }
     }
 
     @Override
@@ -762,24 +766,24 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
         // Render tooltip of hovered item
         if (hoveredSlot != noneHovered) {
             int slot = hoveredSlot.getSecond();
-            //            boolean recipeHovered = hoveredSlot.getFirst() == -2;
+            boolean recipeHovered = hoveredSlot.getFirst() == -2;
             boolean orderHovered = hoveredSlot.getFirst() == -1;
-            //TODO
-            BigItemStack entry = /*recipeHovered ? recipesToOrder.get(slot) : */orderHovered ? itemsToOrder.get(slot) : displayedItems.get(hoveredSlot.getFirst())
+            BigItemStack entry = recipeHovered ? recipesToOrder.get(slot) : orderHovered ? itemsToOrder.get(slot) : displayedItems.get(hoveredSlot.getFirst())
                 .get(slot);
 
-            //TODO
-            //            if (recipeHovered) {
-            //                ArrayList<Text> lines = new ArrayList<>(entry.stack.getTooltipLines(
-            //                    TooltipContext.of(client.world),
-            //                    client.player,
-            //                    TooltipFlag.NORMAL
-            //                ));
-            //                if (lines.size() > 0)
-            //                    lines.set(0, CreateLang.translateDirect("gui.stock_keeper.craft", lines.get(0).copy()));
-            //                graphics.drawTooltip(textRenderer, lines, mouseX, mouseY);
-            //            } else
-            graphics.drawItemTooltip(textRenderer, entry.stack, mouseX, mouseY);
+            if (recipeHovered) {
+                ArrayList<Text> lines = new ArrayList<>(entry.stack.getTooltip(
+                    TooltipContext.create(client.world),
+                    client.player,
+                    TooltipType.BASIC
+                ));
+                if (!lines.isEmpty()) {
+                    lines.set(0, CreateLang.translateDirect("gui.stock_keeper.craft", lines.getFirst().copy()));
+                }
+                graphics.drawTooltip(textRenderer, lines, mouseX, mouseY);
+            } else {
+                graphics.drawItemTooltip(textRenderer, entry.stack, mouseX, mouseY);
+            }
         }
 
         // Render tooltip of lock option
@@ -819,7 +823,7 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
             }
             AllGuiTextures.STOCK_KEEPER_REQUEST_SLOT.render(graphics, 0, 0);
         }
-        boolean craftable = false;//TODO entry instanceof CraftableBigItemStack;
+        boolean craftable = entry instanceof CraftableBigItemStack;
         Matrix3x2fStack ms = graphics.getMatrices();
         ms.pushMatrix();
 
@@ -932,14 +936,13 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
             return Couple.create(-1, col);
         }
 
-        //TODO
-        //        // Ordered recipe is hovered
-        //        if (y >= orderY - 31 && y < orderY - 31 + rowHeight) {
-        //            int jeiX = this.x + (windowWidth - colWidth * recipesToOrder.size()) / 2 + 1;
-        //            int col = MathHelper.floorDiv(x - jeiX, colWidth);
-        //            if (recipesToOrder.size() > col && col >= 0)
-        //                return Couple.create(-2, col);
-        //        }
+        // Ordered recipe is hovered
+        if (y >= orderY - 31 && y < orderY - 31 + rowHeight) {
+            int jeiX = this.x + (windowWidth - colWidth * recipesToOrder.size()) / 2 + 1;
+            int col = MathHelper.floorDiv(x - jeiX, colWidth);
+            if (recipesToOrder.size() > col && col >= 0)
+                return Couple.create(-2, col);
+        }
 
         if (y < this.y + 16 || y > this.y + windowHeight - 80)
             return noneHovered;
@@ -967,6 +970,27 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
         }
 
         return noneHovered;
+    }
+
+    @Nullable
+    public ItemStack getHoveredItemStack(int mouseX, int mouseY) {
+        Couple<Integer> hoveredSlot = getHoveredSlot(mouseX, mouseY);
+        if (hoveredSlot == noneHovered) {
+            return null;
+        }
+        int index = hoveredSlot.getSecond();
+        boolean recipeHovered = hoveredSlot.getFirst() == -2;
+        BigItemStack entry;
+        if (recipeHovered) {
+            entry = recipesToOrder.get(index);
+        } else {
+            if (hoveredSlot.getFirst() == -1) {
+                entry = itemsToOrder.get(index);
+            } else {
+                entry = displayedItems.get(hoveredSlot.getFirst()).get(index);
+            }
+        }
+        return entry.stack.copy();
     }
 
     private boolean isConfirmHovered(int mouseX, int mouseY) {
@@ -1079,23 +1103,21 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
 
         // Items
         boolean orderClicked = hoveredSlot.getFirst() == -1;
-        //TODO
-        //        boolean recipeClicked = hoveredSlot.getFirst() == -2;
-        BigItemStack entry = /*recipeClicked ? recipesToOrder.get(hoveredSlot.getSecond()) : */orderClicked ? itemsToOrder.get(hoveredSlot.getSecond()) : displayedItems.get(
+        boolean recipeClicked = hoveredSlot.getFirst() == -2;
+        BigItemStack entry = recipeClicked ? recipesToOrder.get(hoveredSlot.getSecond()) : orderClicked ? itemsToOrder.get(hoveredSlot.getSecond()) : displayedItems.get(
             hoveredSlot.getFirst()).get(hoveredSlot.getSecond());
 
         ItemStack itemStack = entry.stack;
         int transfer = hasShiftDown() ? itemStack.getMaxCount() : hasControlDown() ? 10 : 1;
 
-        //TODO
-        //        if (recipeClicked && entry instanceof CraftableBigItemStack cbis) {
-        //            if (rmb && cbis.count == 0) {
-        //                recipesToOrder.remove(cbis);
-        //                return true;
-        //            }
-        //            requestCraftable(cbis, rmb ? -transfer : transfer);
-        //            return true;
-        //        }
+        if (recipeClicked && entry instanceof CraftableBigItemStack cbis) {
+            if (rmb && cbis.count == 0) {
+                recipesToOrder.remove(cbis);
+                return true;
+            }
+            requestCraftable(cbis, rmb ? -transfer : transfer);
+            return true;
+        }
 
         BigItemStack existingOrder = getOrderForItem(entry.stack);
         if (existingOrder == null) {
@@ -1149,19 +1171,17 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
         }
 
         boolean orderClicked = hoveredSlot.getFirst() == -1;
-        //TODO
-        //        boolean recipeClicked = hoveredSlot.getFirst() == -2;
-        BigItemStack entry = /*recipeClicked ? recipesToOrder.get(hoveredSlot.getSecond()) : */orderClicked ? itemsToOrder.get(hoveredSlot.getSecond()) : displayedItems.get(
+        boolean recipeClicked = hoveredSlot.getFirst() == -2;
+        BigItemStack entry = recipeClicked ? recipesToOrder.get(hoveredSlot.getSecond()) : orderClicked ? itemsToOrder.get(hoveredSlot.getSecond()) : displayedItems.get(
             hoveredSlot.getFirst()).get(hoveredSlot.getSecond());
 
         boolean remove = scrollY < 0;
         int transfer = MathHelper.ceil(Math.abs(scrollY)) * (hasControlDown() ? 10 : 1);
 
-        //TODO
-        //        if (recipeClicked && entry instanceof CraftableBigItemStack cbis) {
-        //            requestCraftable(cbis, remove ? -transfer : transfer);
-        //            return true;
-        //        }
+        if (recipeClicked && entry instanceof CraftableBigItemStack cbis) {
+            requestCraftable(cbis, remove ? -transfer : transfer);
+            return true;
+        }
 
         BigItemStack existingOrder = orderClicked ? entry : getOrderForItem(entry.stack);
         if (existingOrder == null) {
@@ -1327,62 +1347,61 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
 
         PackageOrderWithCrafts order = PackageOrderWithCrafts.simple(itemsToOrder);
 
-        //TODO
-        //        if (canRequestCraftingPackage && !itemsToOrder.isEmpty() && !recipesToOrder.isEmpty()) {
-        //            List<CraftingEntry> craftList = new ArrayList<>();
-        //            for (CraftableBigItemStack cbis : recipesToOrder) {
-        //                if (!(cbis.recipe instanceof CraftingRecipe cr))
-        //                    continue;
-        //                int craftedCount = 0;
-        //                int targetCount = cbis.count / cbis.getOutputCount(blockEntity.getLevel());
-        //                List<BigItemStack> mutableOrder = BigItemStack.duplicateWrappers(itemsToOrder);
-        //
-        //                while (craftedCount < targetCount) {
-        //                    // Carefully split the ordered recipes based on what exactly will be used to craft them
-        //                    PackageOrder pattern = new PackageOrder(FactoryPanelScreen.convertRecipeToPackageOrderContext(cr, mutableOrder, true));
-        //                    int maxCrafts = targetCount - craftedCount;
-        //                    int availableCrafts = 0;
-        //
-        //                    boolean itemsExhausted = false;
-        //                    Outer:
-        //                    while (availableCrafts < maxCrafts && !itemsExhausted) {
-        //                        List<BigItemStack> previousSnapshot = BigItemStack.duplicateWrappers(mutableOrder);
-        //                        itemsExhausted = true;
-        //                        Pattern:
-        //                        for (BigItemStack patternStack : pattern.stacks()) {
-        //                            if (patternStack.stack.isEmpty())
-        //                                continue;
-        //                            for (BigItemStack ordered : mutableOrder) {
-        //                                if (!ItemStack.areItemsAndComponentsEqual(ordered.stack, patternStack.stack))
-        //                                    continue;
-        //                                if (ordered.count == 0)
-        //                                    continue;
-        //                                ordered.count -= 1;
-        //                                itemsExhausted = false;
-        //                                continue Pattern;
-        //                            }
-        //                            mutableOrder = previousSnapshot;
-        //                            break Outer;
-        //                        }
-        //                        availableCrafts++;
-        //                    }
-        //
-        //                    if (availableCrafts == 0)
-        //                        break;
-        //
-        //                    craftList.add(new CraftingEntry(pattern, availableCrafts));
-        //                    craftedCount += availableCrafts;
-        //                }
-        //
-        //            }
-        //            order = new PackageOrderWithCrafts(order.orderedStacks(), craftList);
-        //        }
+        if (canRequestCraftingPackage && !itemsToOrder.isEmpty() && !recipesToOrder.isEmpty()) {
+            List<CraftingEntry> craftList = new ArrayList<>();
+            for (CraftableBigItemStack cbis : recipesToOrder) {
+                if (!cbis.input.crafting()) {
+                    continue;
+                }
+                int craftedCount = 0;
+                int targetCount = cbis.count / cbis.stack.getCount();
+                List<BigItemStack> mutableOrder = BigItemStack.duplicateWrappers(itemsToOrder);
+
+                while (craftedCount < targetCount) {
+                    // Carefully split the ordered recipes based on what exactly will be used to craft them
+                    PackageOrder pattern = cbis.input.getPattern(mutableOrder);
+                    int maxCrafts = targetCount - craftedCount;
+                    int availableCrafts = 0;
+
+                    boolean itemsExhausted = false;
+                    Outer:
+                    while (availableCrafts < maxCrafts && !itemsExhausted) {
+                        List<BigItemStack> previousSnapshot = BigItemStack.duplicateWrappers(mutableOrder);
+                        itemsExhausted = true;
+                        Pattern:
+                        for (BigItemStack patternStack : pattern.stacks()) {
+                            if (patternStack.stack.isEmpty())
+                                continue;
+                            for (BigItemStack ordered : mutableOrder) {
+                                if (!ItemStack.areItemsAndComponentsEqual(ordered.stack, patternStack.stack))
+                                    continue;
+                                if (ordered.count == 0)
+                                    continue;
+                                ordered.count -= 1;
+                                itemsExhausted = false;
+                                continue Pattern;
+                            }
+                            mutableOrder = previousSnapshot;
+                            break Outer;
+                        }
+                        availableCrafts++;
+                    }
+
+                    if (availableCrafts == 0)
+                        break;
+
+                    craftList.add(new CraftingEntry(pattern, availableCrafts));
+                    craftedCount += availableCrafts;
+                }
+
+            }
+            order = new PackageOrderWithCrafts(order.orderedStacks(), craftList);
+        }
 
         client.player.networkHandler.sendPacket(new PackageOrderRequestPacket(blockEntity.getPos(), order, addressBox.getText(), encodeRequester));
 
         itemsToOrder = new ArrayList<>();
-        //TODO
-        //        recipesToOrder = new ArrayList<>();
+        recipesToOrder = new ArrayList<>();
         blockEntity.ticksSinceLastUpdate = 10;
         successTicks = 1;
 
@@ -1419,173 +1438,169 @@ public class StockKeeperRequestScreen extends AbstractSimiContainerScreen<StockK
         }
     }
 
-    //TODO
-    //    public void requestCraftable(CraftableBigItemStack cbis, int requestedDifference) {
-    //        boolean takeOrdersAway = requestedDifference < 0;
-    //        if (takeOrdersAway)
-    //            requestedDifference = Math.max(-cbis.count, requestedDifference);
-    //        if (requestedDifference == 0)
-    //            return;
-    //
-    //        InventorySummary availableItems = blockEntity.getLastClientsideStockSnapshotAsSummary();
-    //        Function<ItemStack, Integer> countModifier = stack -> {
-    //            BigItemStack ordered = getOrderForItem(stack);
-    //            return ordered == null ? 0 : -ordered.count;
-    //        };
-    //
-    //        if (takeOrdersAway) {
-    //            availableItems = new InventorySummary();
-    //            for (BigItemStack ordered : itemsToOrder)
-    //                availableItems.add(ordered.stack, ordered.count);
-    //            countModifier = stack -> 0;
-    //        }
-    //
-    //        Pair<Integer, List<List<BigItemStack>>> craftingResult = maxCraftable(
-    //            cbis,
-    //            availableItems,
-    //            countModifier,
-    //            takeOrdersAway ? -1 : 9 - itemsToOrder.size()
-    //        );
-    //        int outputCount = cbis.getOutputCount(blockEntity.getWorld());
-    //        int adjustToRecipeAmount = MathHelper.ceil(Math.abs(requestedDifference) / (float) outputCount) * outputCount;
-    //        int maxCraftable = Math.min(adjustToRecipeAmount, craftingResult.getFirst());
-    //
-    //        if (maxCraftable == 0)
-    //            return;
-    //
-    //        cbis.count += takeOrdersAway ? -maxCraftable : maxCraftable;
-    //
-    //        List<List<BigItemStack>> validEntriesByIngredient = craftingResult.getSecond();
-    //        for (List<BigItemStack> list : validEntriesByIngredient) {
-    //            int remaining = maxCraftable / outputCount;
-    //            for (BigItemStack entry : list) {
-    //                if (remaining <= 0)
-    //                    break;
-    //
-    //                int toTransfer = Math.min(remaining, entry.count);
-    //                BigItemStack order = getOrderForItem(entry.stack);
-    //
-    //                if (takeOrdersAway) {
-    //                    if (order != null) {
-    //                        order.count -= toTransfer;
-    //                        if (order.count == 0)
-    //                            itemsToOrder.remove(order);
-    //                    }
-    //                } else {
-    //                    if (order == null)
-    //                        itemsToOrder.add(order = new BigItemStack(entry.stack.copyWithCount(1), 0));
-    //                    order.count += toTransfer;
-    //                }
-    //
-    //                remaining -= entry.count;
-    //            }
-    //        }
-    //
-    //        updateCraftableAmounts();
-    //    }
+    public void requestCraftable(CraftableBigItemStack cbis, int requestedDifference) {
+        boolean takeOrdersAway = requestedDifference < 0;
+        if (takeOrdersAway)
+            requestedDifference = Math.max(-cbis.count, requestedDifference);
+        if (requestedDifference == 0)
+            return;
 
-    //TODO
-    //    private void updateCraftableAmounts() {
-    //        InventorySummary usedItems = new InventorySummary();
-    //        InventorySummary availableItems = new InventorySummary();
-    //
-    //        for (BigItemStack ordered : itemsToOrder)
-    //            availableItems.add(ordered.stack, ordered.count);
-    //
-    //        for (CraftableBigItemStack cbis : recipesToOrder) {
-    //            Pair<Integer, List<List<BigItemStack>>> craftingResult = maxCraftable(cbis, availableItems, stack -> -usedItems.getCountOf(stack), -1);
-    //            int maxCraftable = craftingResult.getFirst();
-    //            List<List<BigItemStack>> validEntriesByIngredient = craftingResult.getSecond();
-    //            int outputCount = cbis.getOutputCount(blockEntity.getLevel());
-    //
-    //            // Only tweak amounts downward
-    //            cbis.count = Math.min(cbis.count, maxCraftable);
-    //
-    //            // Use ingredients up before checking next recipe
-    //            for (List<BigItemStack> list : validEntriesByIngredient) {
-    //                int remaining = cbis.count / outputCount;
-    //                for (BigItemStack entry : list) {
-    //                    if (remaining <= 0)
-    //                        break;
-    //                    usedItems.add(entry.stack, Math.min(remaining, entry.count));
-    //                    remaining -= entry.count;
-    //                }
-    //            }
-    //        }
-    //
-    //        canRequestCraftingPackage = false;
-    //        for (BigItemStack ordered : itemsToOrder)
-    //            if (usedItems.getCountOf(ordered.stack) != ordered.count)
-    //                return;
-    //        canRequestCraftingPackage = true;
-    //    }
+        InventorySummary availableItems = blockEntity.getLastClientsideStockSnapshotAsSummary();
+        Function<ItemStack, Integer> countModifier = stack -> {
+            BigItemStack ordered = getOrderForItem(stack);
+            return ordered == null ? 0 : -ordered.count;
+        };
 
-    //TODO
-    //    private Pair<Integer, List<List<BigItemStack>>> maxCraftable(
-    //        CraftableBigItemStack cbis,
-    //        InventorySummary summary,
-    //        Function<ItemStack, Integer> countModifier,
-    //        int newTypeLimit
-    //    ) {
-    //        List<Ingredient> ingredients = cbis.getIngredients();
-    //        List<List<BigItemStack>> validEntriesByIngredient = new ArrayList<>();
-    //        List<BigItemStack> alreadyCreated = new ArrayList<>();
-    //
-    //        for (Ingredient ingredient : ingredients) {
-    //            if (ingredient.isEmpty())
-    //                continue;
-    //            List<BigItemStack> valid = new ArrayList<>();
-    //            for (List<BigItemStack> list : summary.getItemMap().values())
-    //                Entries:for (BigItemStack entry : list) {
-    //                    if (!ingredient.test(entry.stack))
-    //                        continue;
-    //                    for (BigItemStack visitedStack : alreadyCreated) {
-    //                        if (!ItemStack.areItemsAndComponentsEqual(visitedStack.stack, entry.stack))
-    //                            continue;
-    //                        valid.add(visitedStack);
-    //                        continue Entries;
-    //                    }
-    //                    BigItemStack asBis = new BigItemStack(entry.stack, summary.getCountOf(entry.stack) + countModifier.apply(entry.stack));
-    //                    if (asBis.count > 0) {
-    //                        valid.add(asBis);
-    //                        alreadyCreated.add(asBis);
-    //                    }
-    //                }
-    //
-    //            if (valid.isEmpty())
-    //                return Pair.of(0, List.of());
-    //
-    //            Collections.sort(valid, (bis1, bis2) -> -Integer.compare(summary.getCountOf(bis1.stack), summary.getCountOf(bis2.stack)));
-    //            validEntriesByIngredient.add(valid);
-    //        }
-    //
-    //        // Used new items may have to be trimmed
-    //        if (newTypeLimit != -1) {
-    //            int toRemove = (int) validEntriesByIngredient.stream().flatMap(l -> l.stream()).filter(entry -> getOrderForItem(entry.stack) == null)
-    //                .distinct().count() - newTypeLimit;
-    //
-    //            for (int i = 0; i < toRemove; i++)
-    //                removeLeastEssentialItemStack(validEntriesByIngredient);
-    //        }
-    //
-    //        // Ingredients with shared items must divide counts
-    //        validEntriesByIngredient = resolveIngredientAmounts(validEntriesByIngredient);
-    //
-    //        // Determine the bottlenecking ingredient
-    //        int minCount = Integer.MAX_VALUE;
-    //        for (List<BigItemStack> list : validEntriesByIngredient) {
-    //            int sum = 0;
-    //            for (BigItemStack entry : list)
-    //                sum += entry.count;
-    //            minCount = Math.min(sum, minCount);
-    //        }
-    //
-    //        if (minCount == 0)
-    //            return Pair.of(0, List.of());
-    //
-    //        int outputCount = cbis.getOutputCount(blockEntity.getWorld());
-    //        return Pair.of(minCount * outputCount, validEntriesByIngredient);
-    //    }
+        if (takeOrdersAway) {
+            availableItems = new InventorySummary();
+            for (BigItemStack ordered : itemsToOrder)
+                availableItems.add(ordered.stack, ordered.count);
+            countModifier = stack -> 0;
+        }
+
+        Pair<Integer, List<List<BigItemStack>>> craftingResult = maxCraftable(
+            cbis,
+            availableItems,
+            countModifier,
+            takeOrdersAway ? -1 : 9 - itemsToOrder.size()
+        );
+        int outputCount = cbis.stack.getCount();
+        int adjustToRecipeAmount = MathHelper.ceil(Math.abs(requestedDifference) / (float) outputCount) * outputCount;
+        int maxCraftable = Math.min(adjustToRecipeAmount, craftingResult.getFirst());
+
+        if (maxCraftable == 0)
+            return;
+
+        cbis.count += takeOrdersAway ? -maxCraftable : maxCraftable;
+
+        List<List<BigItemStack>> validEntriesByIngredient = craftingResult.getSecond();
+        for (List<BigItemStack> list : validEntriesByIngredient) {
+            int remaining = maxCraftable / outputCount;
+            for (BigItemStack entry : list) {
+                if (remaining <= 0)
+                    break;
+
+                int toTransfer = Math.min(remaining, entry.count);
+                BigItemStack order = getOrderForItem(entry.stack);
+
+                if (takeOrdersAway) {
+                    if (order != null) {
+                        order.count -= toTransfer;
+                        if (order.count == 0)
+                            itemsToOrder.remove(order);
+                    }
+                } else {
+                    if (order == null)
+                        itemsToOrder.add(order = new BigItemStack(entry.stack.copyWithCount(1), 0));
+                    order.count += toTransfer;
+                }
+
+                remaining -= entry.count;
+            }
+        }
+
+        updateCraftableAmounts();
+    }
+
+    private void updateCraftableAmounts() {
+        InventorySummary usedItems = new InventorySummary();
+        InventorySummary availableItems = new InventorySummary();
+
+        for (BigItemStack ordered : itemsToOrder)
+            availableItems.add(ordered.stack, ordered.count);
+
+        for (CraftableBigItemStack cbis : recipesToOrder) {
+            Pair<Integer, List<List<BigItemStack>>> craftingResult = maxCraftable(cbis, availableItems, stack -> -usedItems.getCountOf(stack), -1);
+            int maxCraftable = craftingResult.getFirst();
+            List<List<BigItemStack>> validEntriesByIngredient = craftingResult.getSecond();
+            int outputCount = cbis.stack.getCount();
+
+            // Only tweak amounts downward
+            cbis.count = Math.min(cbis.count, maxCraftable);
+
+            // Use ingredients up before checking next recipe
+            for (List<BigItemStack> list : validEntriesByIngredient) {
+                int remaining = cbis.count / outputCount;
+                for (BigItemStack entry : list) {
+                    if (remaining <= 0)
+                        break;
+                    usedItems.add(entry.stack, Math.min(remaining, entry.count));
+                    remaining -= entry.count;
+                }
+            }
+        }
+
+        canRequestCraftingPackage = false;
+        for (BigItemStack ordered : itemsToOrder)
+            if (usedItems.getCountOf(ordered.stack) != ordered.count)
+                return;
+        canRequestCraftingPackage = true;
+    }
+
+    private Pair<Integer, List<List<BigItemStack>>> maxCraftable(
+        CraftableBigItemStack cbis,
+        InventorySummary summary,
+        Function<ItemStack, Integer> countModifier,
+        int newTypeLimit
+    ) {
+        List<List<BigItemStack>> validEntriesByIngredient = new ArrayList<>();
+        List<BigItemStack> alreadyCreated = new ArrayList<>();
+
+        for (Object2ObjectMap.Entry<List<ItemStack>, IntList> value : cbis.input.entrySet()) {
+            List<ItemStack> ingredient = value.getKey();
+            List<BigItemStack> valid = new ArrayList<>();
+            for (List<BigItemStack> list : summary.getItemMap().values())
+                Entries:for (BigItemStack entry : list) {
+                    if (!CraftableInput.contains(ingredient, entry.stack))
+                        continue;
+                    for (BigItemStack visitedStack : alreadyCreated) {
+                        if (!ItemStack.areItemsAndComponentsEqual(visitedStack.stack, entry.stack))
+                            continue;
+                        valid.add(visitedStack);
+                        continue Entries;
+                    }
+                    BigItemStack asBis = new BigItemStack(entry.stack, summary.getCountOf(entry.stack) + countModifier.apply(entry.stack));
+                    if (asBis.count > 0) {
+                        valid.add(asBis);
+                        alreadyCreated.add(asBis);
+                    }
+                }
+
+            if (valid.isEmpty())
+                return Pair.of(0, List.of());
+
+            valid.sort((bis1, bis2) -> -Integer.compare(summary.getCountOf(bis1.stack), summary.getCountOf(bis2.stack)));
+            for (int i = 0, size = value.getValue().size(); i < size; i++) {
+                validEntriesByIngredient.add(valid);
+            }
+        }
+
+        // Used new items may have to be trimmed
+        if (newTypeLimit != -1) {
+            int toRemove = (int) validEntriesByIngredient.stream().flatMap(Collection::stream).filter(entry -> getOrderForItem(entry.stack) == null)
+                .distinct().count() - newTypeLimit;
+
+            for (int i = 0; i < toRemove; i++)
+                removeLeastEssentialItemStack(validEntriesByIngredient);
+        }
+
+        // Ingredients with shared items must divide counts
+        validEntriesByIngredient = resolveIngredientAmounts(validEntriesByIngredient);
+
+        // Determine the bottlenecking ingredient
+        int minCount = Integer.MAX_VALUE;
+        for (List<BigItemStack> list : validEntriesByIngredient) {
+            int sum = 0;
+            for (BigItemStack entry : list)
+                sum += entry.count;
+            minCount = Math.min(sum, minCount);
+        }
+
+        if (minCount == 0)
+            return Pair.of(0, List.of());
+
+        return Pair.of(minCount * cbis.stack.getCount(), validEntriesByIngredient);
+    }
 
     private void removeLeastEssentialItemStack(List<List<BigItemStack>> validIngredients) {
         List<BigItemStack> longest = null;
